--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # config
-cover: //blog.ghost.org/content/images/2013/Nov/cover.png
-logo: //blog.ghost.org/content/images/2013/Nov/bloglogo_1-1.png
-bio: 'A designer, developer and entrepreneur. Spends his time travelling the world with a bag of kites. Likes journalism and publishing platforms.'
+cover: https://images.unsplash.com/photo-1678305538825-7a547cea04aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3866&q=80
+logo: http://lidamao.cn/content/images/2019/01/-----logo-3.png
 
 # Content
 excerpt_link: Read More
